# ERP_MC

./: .env.example  .gitattributes  .gitignore  ENGINEERING_STANDARDS.md  mc_v3.md  review_arquitectura_mc_v3.md
.github/workflows/: ci-architecture.yml  (+2 more)
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: audit.py  config.py  logger.py  middleware.py  security.py
backend/app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/clientes/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/notificaciones/: models.py  router.py  schemas.py  service.py
backend/app/modules/productos/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/sac/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/ventas/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/shared/: email.py  pagination.py  pdf.py  responses.py  rut.py  secuencias.py
backend/scripts/: generate_openapi_schema.py  validate_mirror.sh  validate_schema_registry.py
backend/tests/: conftest.py
backend/tests/modules/auth/: test_auth.py  test_usuarios.py
backend/tests/modules/ventas/: test_proceso_venta.py  test_schemas.py  test_transiciones.py
backend/tests/shared/: test_rut.py
docs/: SCHEMA_MAP.md  SYSTEM_STATE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
supabase/: config.toml  seed.sql
(+99 files in other folders)
